--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,2 +1,7 @@
 inherit_from: .rubocop_todo.yml
 require: rubocop-rspec
+
+Metrics/LineLength:
+  Exclude:
+    - telegram-bot-ruby.gemspec
+    - examples/*.rb
