Fix Style/EmptyMethod cop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,3 +5,6 @@ Metrics/LineLength:
   Exclude:
     - telegram-bot-ruby.gemspec
     - examples/*.rb
+
+Style/EmptyMethod:
+  EnforcedStyle: expanded
