--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
----
 language: ruby
 rvm:
   - 2.3.0
-before_install:
-  - gem install bundler
+script:
+  - bundle exec rubocop
+  - bundle exec rspec
