Add rake tasks to keep track of API updates

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,7 @@ require: rubocop-rspec
 Metrics/BlockLength:
   Exclude:
     - spec/**/*.rb
+    - lib/telegram/tasks/bot.rake
 
 Metrics/LineLength:
   Exclude:
