--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -10,5 +10,9 @@ jobs:
     steps:
       - uses: actions/stale@v7
         with:
+          days-before-close: 7
+          days-before-stale: 60
           stale-issue-label: stale
+          stale-issue-message: This issue is stale because it has been open 60 days with no activity. Remove stale label or comment or this will be closed in 7 days.
           stale-pr-label: stale
+          stale-pr-message: This PR is stale because it has been open 60 days with no activity. Remove stale label or comment or this will be closed in 7 days.
