Return corresponding types for API methods
Don't touch `Api#call`, leave it with raw responses,
but convert `result` in `method_missing`.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,6 +16,9 @@ Metrics/BlockLength:
     - context
     - describe
     - task
+Metrics/ClassLength:
+  Exclude:
+    - lib/telegram/bot/api/endpoints.rb
 
 Layout/LineLength:
   Max: 120
