--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,6 +16,12 @@ Metrics/BlockLength:
     - context
     - describe
     - task
+Metrics/ClassLength:
+  Exclude:
+    - lib/telegram/bot/api/endpoints.rb
 
 Layout/LineLength:
   Max: 120
+
+RSpec/MultipleMemoizedHelpers:
+  Enabled: false
