--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,9 +19,14 @@ Metrics/BlockLength:
 Metrics/ClassLength:
   Exclude:
     - lib/telegram/bot/api/endpoints.rb
+Metrics/MethodLength:
+  Exclude:
+    - spec/**/*
 
 Layout/LineLength:
   Max: 120
 
 RSpec/MultipleMemoizedHelpers:
+  Enabled: false
+RSpec/NestedGroups:
   Enabled: false
